fix for section items being aligned left on mobile

--- a/style.css
+++ b/style.css
@@ -82,7 +82,11 @@ html {
 .content-section {
     padding: 1rem 0;
     flex-direction: column;
-    justify-items: center;
+    align-items: center;
+}
+
+.content-section .content-section-title {
+    text-align: center;
 }
 
 .content-section p {
